# openparsec

./: README.md  meson.build
src/libparsec/: g_telep.cpp
src/libraries/glew/: meson.build
src/parsec/: meson.build
src/parsec_server/: meson.build
